--- a/TombstoneHelper/TombstoneHelper.csproj
+++ b/TombstoneHelper/TombstoneHelper.csproj
@@ -60,6 +60,7 @@
     <Compile Include="SliderTombstoner.cs" />
     <Compile Include="TextBoxTombstoner.cs" />
     <Compile Include="ICanTombstone.cs" />
+    <Compile Include="ToggleButtonTombstoner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.CSharp.targets" />
