--- a/TombstoneHelper.Demo/TombstoneHelper.Demo.csproj
+++ b/TombstoneHelper.Demo/TombstoneHelper.Demo.csproj
@@ -49,6 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Phone" />
+    <Reference Include="Microsoft.Phone.Controls, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Phone.Interop" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
@@ -80,6 +81,9 @@
     </Compile>
     <Compile Include="pages\PasswordBoxes.xaml.cs">
       <DependentUpon>PasswordBoxes.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="pages\PivotExample.xaml.cs">
+      <DependentUpon>PivotExample.xaml</DependentUpon>
     </Compile>
     <Compile Include="pages\RadioButtons.xaml.cs">
       <DependentUpon>RadioButtons.xaml</DependentUpon>
@@ -131,6 +135,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="pages\PasswordBoxes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="pages\PivotExample.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
