--- a/TombstoneHelper/TombstoneHelper.csproj
+++ b/TombstoneHelper/TombstoneHelper.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Phone" />
+    <Reference Include="Microsoft.Phone.Controls, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
@@ -51,6 +52,10 @@
   <ItemGroup>
     <Compile Include="AutoTombstonePage.cs" />
     <Compile Include="CheckBoxTombstoner.cs" />
+    <Compile Include="FakeFrameworkElementActingAsPivotIndicator.cs" />
+    <Compile Include="FakeFrameworkElementActingAsPivotItemEndIndicator.cs" />
+    <Compile Include="FakeFrameworkElementActingAsPivotItemStartIndicator.cs" />
+    <Compile Include="PivotTombstoner.cs" />
     <Compile Include="RenderScheduler.cs" />
     <Compile Include="PhoneApplicationPageTombstoner.cs" />
     <Compile Include="ListBoxTombstoner.cs" />
