added to pivot example to show using multiple different types of control also fixed issue where tombstoning a listbox and the page also supported tombstoning scrollviewers

--- a/TombstoneHelper/TombstoneHelper.csproj
+++ b/TombstoneHelper/TombstoneHelper.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Compile Include="AutoTombstonePage.cs" />
     <Compile Include="CheckBoxTombstoner.cs" />
+    <Compile Include="FakeFrameworkElementActingAsListBoxEndIndicator.cs" />
+    <Compile Include="FakeFrameworkElementActingAsListBoxStartIndicator.cs" />
     <Compile Include="FakeFrameworkElementActingAsPivotIndicator.cs" />
     <Compile Include="FakeFrameworkElementActingAsPivotItemEndIndicator.cs" />
     <Compile Include="FakeFrameworkElementActingAsPivotItemStartIndicator.cs" />
