--- a/TombstoneHelper.Demo/TombstoneHelper.Demo.csproj
+++ b/TombstoneHelper.Demo/TombstoneHelper.Demo.csproj
@@ -79,6 +79,9 @@
     <Compile Include="pages\ListBoxes.xaml.cs">
       <DependentUpon>ListBoxes.xaml</DependentUpon>
     </Compile>
+    <Compile Include="pages\PanoramaExample.xaml.cs">
+      <DependentUpon>PanoramaExample.xaml</DependentUpon>
+    </Compile>
     <Compile Include="pages\PasswordBoxes.xaml.cs">
       <DependentUpon>PasswordBoxes.xaml</DependentUpon>
     </Compile>
@@ -134,6 +137,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="pages\PanoramaExample.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="pages\PasswordBoxes.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -178,6 +185,7 @@
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="pages\PanoramaBackground.png" />
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
   <ItemGroup>
